--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="sign_up">SIGN UP</string>
 
     <string name="create_account">Create Account</string>
+    <string name="create_poll">Create a Poll</string>
     <string name="choose_avatar">Choose your avatar</string>
     <string name="choose_topic">Choose your topic</string>
     <string name="congratulations">Congratulations!!!</string>
@@ -24,6 +25,11 @@
     <string name="create">Create</string>
     <string name="next">Next</string>
     <string name="finish">Finish</string>
+    <string name="activity_create_question_text_hint">Create a question</string>
+    <string name="option1">Option 1</string>
+    <string name="option2">Option 2</string>
+    <string name="option3">Option 3</string>
+    <string name="option4">Option 4</string>
 
     <string name="name_cannot_empty">Name cannot be empty</string>
     <string name="username_cannot_empty">Username or email cannot be empty</string>
