--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="already_have_an_account">Already have an account?</string>
     <string name="loginUp">LOGIN</string>
     <string name="sign_up">SIGN UP</string>
+    <string name="forgot_password">FORGOT PASSWORD</string>
+    <string name="forgot_password_title">Forgot Password</string>
 
     <string name="create_account">Create Account</string>
     <string name="create_poll">Create a Poll</string>
@@ -23,6 +25,7 @@
     <string name="register">Register</string>
     <string name="email">Email</string>
     <string name="create">Create</string>
+    <string name="send">Send</string>
     <string name="next">Next</string>
     <string name="finish">Finish</string>
     <string name="activity_create_question_text_hint">Create a question</string>
