--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="save">Save</string>
     <string name="next">Next</string>
     <string name="finish">Finish</string>
+    <string name="select_a_category">Select at lease one category</string>
     <string name="activity_create_question_text_hint">Create a question</string>
     <string name="option1">Option 1</string>
     <string name="option2">Option 2</string>
@@ -44,6 +45,7 @@
     <string name="text_delete_poll_text">DELETE POLL</string>
     <string name="text_cancel_text">CANCEL</string>
     <string name="name_cannot_empty">Name cannot be empty</string>
+    <string name="question_cannot_empty">Question cannot be empty</string>
     <string name="username_cannot_empty">Username or email cannot be empty</string>
     <string name="password_cannot_empty">Password cannot be empty</string>
     <string name="email_cannot_empty">Email cannot be empty</string>
