--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="save">Save</string>
     <string name="next">Next</string>
     <string name="finish">Finish</string>
+    <string name="vote">Vote</string>
+    <string name="share">Share</string>
     <string name="select_a_category">Select at lease one category</string>
     <string name="activity_create_question_text_hint">Create a question</string>
     <string name="option1">Option 1 (Required)</string>
