--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="create_account">Create Account</string>
     <string name="update_account">Update Account</string>
     <string name="create_poll">Create a Poll</string>
+    <string name="update_poll">Update Poll</string>
     <string name="create_poll_options">Poll Options</string>
     <string name="choose_avatar">Choose your avatar</string>
     <string name="choose_topic">Choose your topic</string>
@@ -31,6 +32,7 @@
     <string name="create">Create</string>
     <string name="send">Send</string>
     <string name="save">Save</string>
+    <string name="update">Update</string>
     <string name="next">Next</string>
     <string name="finish">Finish</string>
     <string name="vote">Vote</string>
