--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,13 @@
     <string name="update_account">Update Account</string>
     <string name="create_poll">Create a Poll</string>
     <string name="update_poll">Update Poll</string>
+    <string name="share_poll">Share Poll</string>
+    <string name="share_facebook">Facebook</string>
+    <string name="share_instagram">Instagram</string>
+    <string name="share_whatsapp">Whatsapp</string>
+    <string name="share_facebook_message">Poll has been shared to facebook</string>
+    <string name="share_instagram_message">Poll has been shared to instagram</string>
+    <string name="share_whatsapp_message">Poll has been shared to whatsapp</string>
     <string name="create_poll_options">Poll Options</string>
     <string name="choose_avatar">Choose your avatar</string>
     <string name="choose_topic">Choose your topic</string>
